--- a/deploy/ansible/host_vars/esgf.data.example.org
+++ b/deploy/ansible/host_vars/esgf.data.example.org
@@ -18,3 +18,21 @@
 
 ### See: https://github.com/ESGF/esgf-docker/blob/master/docs/deploy-ansible.md#enabling-and-disabling-components
 
+
+
+## OPTIONAL: Enabling SSL for the server
+
+#nginx_config_template: ssl.proxy.conf.j2
+
+#published_port: 443
+
+#ssl_certificate: |
+#  -----BEGIN CERTIFICATE-----
+#  ...
+
+#ssl_private_key: |
+#  -----BEGIN RSA PRIVATE KEY-----
+#  ...
+
+### See: https://github.com/ESGF/esgf-docker/blob/master/docs/deploy-ansible.md#enabling-ssl
+
