Added remaining pieces of the access control config for Ansible

--- a/deploy/ansible/host_vars/esgf.data.example.org
+++ b/deploy/ansible/host_vars/esgf.data.example.org
@@ -34,3 +34,55 @@
 
 ### See: https://github.com/ESGF/esgf-docker/blob/master/docs/deploy-ansible.md#enabling-ssl
 
+
+## OPTIONAL: Enabling access control components
+
+#auth_enabled: true/false
+
+## Configuration for the auth service container
+#auth_settings:
+#  MIDDLEWARE:
+#    - authenticate.oauth2.middleware.BearerTokenAuthenticationMiddleware
+#    - authenticate.oidc.middleware.OpenIDConnectAuthenticationMiddleware
+#    - authorize.opa.middleware.OPAAuthorizationMiddleware
+#  OPA_SERVER:
+#    package_path: esgf
+#    rule_name: allow
+#  # Group info keys for authorization
+#  OAUTH2_GROUPS_KEY: group_membership
+#  OIDC_GROUPS_KEY: group_membership
+#  # OAuth Bearer Token auth settings
+#  OAUTH_CLIENT_ID:
+#  OAUTH_CLIENT_SECRET:
+#  OAUTH_TOKEN_URL:
+#  OAUTH_TOKEN_INTROSPECT_URL:
+#  # OIDC auth settings
+#  OIDC_BACKEND_CLIENT_NAME: esgf
+#  AUTHLIB_OAUTH_CLIENTS:
+#    esgf:
+#      client_id:
+#      client_secret:
+#      authorize_url:
+#      userinfo_endpoint:
+#      client_kwargs:
+#        scope: openid profile email
+
+## Default rego template (override this to use your own).
+#opa_policy_template: policy.rego.j2
+
+## Paths to apply the authorisation policy to and the access group that a user will need.
+#opa_policy_restricted_paths:
+#  - name: threddsdata
+#    path: /thredds/fileServer/restricted/.*
+#    group: admins
+#  - name: example
+#    path: /some/restricted/path/.*
+#    group: admins
+
+## Your server's name. The default policy will deny requests from other hostnames.
+#opa_policy_server_host: example.com
+
+## The logging level of the OPA container. Set this to debug for troubleshooting.
+#opa_log_level: info
+
+### See: https://github.com/ESGF/esgf-docker/blob/master/docs/deploy-ansible.md#enabling-access-control
